variables.Variables.scala.error
Erreur de compilation :
Variables:5: error: not found: value ramasseBiscuit
ramasseBiscuit();
^