variables.Variables.scala.code
var p = 0;
p = 0;
while (!(estSurBiscuit())) {avance();
                            p = p + 1;}
ramasseBiscuit();
while (p!=0) {recule();
              p = p - 1;}